--- a/healthHabitTracker/src/UserLoginDisplay.css
+++ b/healthHabitTracker/src/UserLoginDisplay.css
@@ -38,7 +38,8 @@
     position: relative;
     background-color: #ffffff;
     padding: 30px 70px;
-    font-size: 1.5rem;
+    max-height: 80vh;;
+    font-size: 1.5vw;
     border-radius: 40px;
     
     transition: padding 0.3s ease;
@@ -52,13 +53,13 @@
 } */
 
 .text input{
-    width: 500px;
-    height: 30px;
-    border-radius: 10px;
-    border-width: 0px;
-    margin-bottom: 15px;
-    padding-left: 7px;
-    padding-right: 7px;
+    width: 30vw;
+    height: 2.3vw;
+    border-radius: 1vw;
+    border-width: 0vw;
+    margin-bottom: 1vw;
+    padding-left: 0.7vw;
+    padding-right: 0.7vw;
     background-color: rgb(240, 240, 240);
     font-family: 'Momo Trust Display', serif;;
 }
@@ -75,13 +76,14 @@
     border: none;
     border-radius: 10px;
     background-color: rgb(240, 240, 240);
+    font-size: 1.3vw;
 }
 
 .message-box {
     max-height: 0;             
     opacity: 0;
     overflow: hidden;           
-    font-size: 1.4rem;
+    font-size: 1.4vw;
 
     transition:
         max-height 0.35s ease,
@@ -93,3 +95,42 @@
     opacity: 1;
 }
 
+/*--------------*/
+
+@media (max-width: 900px) {
+  .text input {
+    width: 100%;          
+  }
+
+  .container {
+    padding: 24px 32px;   
+    font-size: 1.3vw;
+  }
+}
+
+@media (max-width: 600px) {
+  .main {
+    position: static;          
+    transform: none;
+    padding: 24px 16px;
+  }
+
+  .container {
+    max-height: none;         
+    width: 100%;
+    box-sizing: border-box;
+    border-radius: 24px;
+  }
+
+  .text input {
+    width: 100%;
+  }
+}
+
+@media (prefers-reduced-motion: reduce) {
+  .text button,
+  .container,
+  .message-box {
+    transition: none;
+  }
+}
