--- a/healthHabitTracker/src/UserLoginDisplay.css
+++ b/healthHabitTracker/src/UserLoginDisplay.css
@@ -64,6 +64,7 @@
     height: 6vh;
     border-radius: 1.5rem;
     border: none;
+    padding-left: 3%;
     margin-bottom: 1rem;
     background-color: rgb(240, 240, 240);
     font-family: 'Momo Trust Display', serif;
